nana_crash_course/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: my-namespace # to be the same as service and pop
  annotations:
    # https://robearlam.com/blog/nginx-ingress-breaking-change-ingress.class-now-required
    kubernetes.io/ingress.class: nginx # Need to include ingress class loader
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: webapp-service # name of the internal service
      port:
        number: 3000 # port of the internal service
  rules:
    # - host: www.hcawebapp.com # web URL
    - http:
        paths:
          - path: / # hca-webapp.com/service
            pathType: Prefix # the path must match exactly
            backend:
              service:
                name: webapp-service # name of the internal service
                port:
                  number: 3000 # port of the internal service
          - path: /service # hca-webapp.com/service
            pathType: Exact
            backend:
              service:
                name: webapp-service # name of the internal service
                port:
                  number: 3000 # port of the internal service
